--- a/lab1/app/src/main/AndroidManifest.xml
+++ b/lab1/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab1">
+        android:theme="@style/Theme.Design.Light.NoActionBar">
 
         <activity android:name=".act_agregartarea"
             android:exported="true"/>
