--- a/lab1/app/src/main/AndroidManifest.xml
+++ b/lab1/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar">
-
-        <activity android:name=".act_agregartarea"
-            android:exported="true"/>
-
+        <activity
+            android:name=".act_modificartarea"
+            android:exported="true" />
+        <activity
+            android:name=".act_agregartarea"
+            android:exported="true" />
         <activity
             android:name=".act_consultartareas"
             android:exported="true">
